tests/compile-fail/integration__integration__general__local_void.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: void-typed variable
   ┌─ <input>:29:9
   │
29 │         void x = delete();
   │         ^^^^ variables must have a value


